fixed dark mode

--- a/src/css/darkmode.css
+++ b/src/css/darkmode.css
@@ -27,7 +27,8 @@
   color: dimgray !important;
 }
 .darkModePageOff{
-    background-color: #f8f8f8;
+    background-color: #f8f8f8!important;
+    color: black !important;
 }
 .headerStyle {
     margin:0px !important;
